fix daft mistake in .travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
   - curl -L https://raw.githubusercontent.com/snmsts/roswell/release/scripts/install-for-ci.sh | sh
 
 script:
-  - ros -e '(handler-case (progn (ql:quickload :varjo.tests :verbose t) (funcall (symbol-function (find-symbol "RUN-ALL-TESTS" :5am))) (uiop:quit 0)) (error () (uiop:quit 1)))'
+  - ros -e '(handler-case (progn (ql:quickload :rtg-math :verbose t) (uiop:quit 0)) (error () (uiop:quit 1)))'
